# jeolib-miallib

./: .gitignore  CMakeLists.txt  Makefile  MiallibConfig.cmake.in  README  README.md  cmake-config.h.in  cmake-config.in  cmake.pc.in  miallib-config.cmake.in
cmake/modules/: FindFFTW.cmake  FindGeoTIFF.cmake  FindPROJ.cmake  FindSHAPELIB.cmake
core/c/: Makefile  OpenClose.c  OpenClose.h  aflood.c  alphacc.c  alphatree.c  alphatreetoCCs.c  b_def.h  b_undef.h  banner.h  base.h  borderdetection.c  borderdetection.h  bresenham.c  bytesex.h  ced.c  chull.c  classification.c  colconv.c  complete.c  compose.c  convolve.c  d_def.h  d_undef.h  dbscan.c  dcluster.c  dendro.c  determineSize.c  determineSize.h  dirmean.c  dist.c  douglas-peucker.c  douglas-peucker.h  edgeweight.c  efedt.c  epc.c  erodil.c  f_def.h  f_undef.h  fah.c  (+158 more)
core/doc/: Doxyfile  Makefile  miallib_logo.xcf
swig/include/: convolve.i  dem.i  dist.i  erodil.i  format.i  geodesy.i  geometry.i  hmt.i  imem.i  imstat.i  io.i  label.i  master.i  mial.i  mialib.i  miallib.i  opclo.i  pointop.i  proj.i  segment.i  stats.i
swig/include/python/: mial_python.i  mialib_python.i  miallib_python.i
swig/python/: Makefile  mial_dealloc.patch  mial_wrap.c.ORI.2016081801  mial_wrap.c.PATCH.2016081801  mialib_dealloc.patch  mialib_wrap.c.ORI.2016092201  mialib_wrap.c.PATCH.2016092201  setup.py
swig/python/doc/: Makefile
swig/python/doc/source/: 1_intro.rst  2_tutorial.rst  3_reference.rst  4_bibliography.rst  conf.py  dem-clean.bib  index.rst  soille_public.bib
xlisp/c/: Makefile  Makefile~  amigastu.c  banner.h  banner_mialib.h  dldmem.c  dlimage.c  dosstuff.c  emxstuff.c  mialib.h  mialib_grazzja.h  miallib.h  mialtypes.h  miatypes.h  osdefs.h  osdefs_grazzja.h  osdefs_marcin.h  ospeerie.h  osptrs.h  osptrs_grazzja.h  osptrs_marcin.h  putpatch.c  sascstuf.c  unixprim.c  unixstuf.c  win32stu.c  winstuff.c  xlbfun.c  xlbignum.c  xlcont.c  xldbug.c  xldmem.c  xldmem.h  xleval.c  xlfio.c  xlftab.c  xlftab.h  xlgeerie.c  xlgeerie.h  xlglob.c  (+29 more)
xlisp/doc/: .latex2html-init  Makefile  README  makecfet  makecfit  makecfvt  miadocxlisp.bib  miadocxlisp.tex  mialdocxlisp.bib  mialdocxlisp.tex  mmacro.tex  myplainnat.bst  sedlspscr  sedscr  sedscr2  sedscr3
xlisp/lsp/: contrast.lsp  dem.lsp  distance.lsp  erodil.lsp  filter.lsp  flow.lsp  format.lsp  geodesy.lsp  geometry.lsp  geometry_tmp.lsp  hmt.lsp  idea.lsp  imstat.lsp  init.lsp  io.lsp  label.lsp  limits.lsp  lut.lsp  opclo.lsp  pointop.lsp  remsens.lsp  segment.lsp  shape.lsp
